--- a/ccp.ipynb
+++ b/ccp.ipynb
@@ -192,6 +192,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Using inplace=True modifies the original DataFrame directly, removing specified columns without creating a new one."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
@@ -388,11 +395,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.get_dummies(df,columns=['Geography','Gender'],drop_first=True)"
+    "df = pd.get_dummies(df,columns=['Geography','Gender'],drop_first=True) # for one hot coding"
    ]
   },
   {
@@ -571,6 +578,19 @@
     "\n",
     "X_train_trf = scaler.fit_transform(X_train)\n",
     "X_test_trf = scaler.transform(X_test)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Dense is a fully connected neural network layer where each neuron connects to all neurons in the previous layer, often followed by an activation function.\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
    ]
   },
   {
